[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/player/player.gd" type="Script" id=1]
[ext_resource path="res://src/player/graphic/smol/walk/frame0009.webp" type="Texture" id=2]
[ext_resource path="res://src/player/graphic/smol/idle/frame0006.webp" type="Texture" id=3]
[ext_resource path="res://src/player/graphic/smol/idle/frame0007.webp" type="Texture" id=4]
[ext_resource path="res://src/player/graphic/smol/walk/frame0010.webp" type="Texture" id=5]
[ext_resource path="res://src/player/movement_state/move.gd" type="Script" id=6]
[ext_resource path="res://src/player/movement_state/fall.gd" type="Script" id=7]
[ext_resource path="res://src/player/movement_state/jump.gd" type="Script" id=8]
[ext_resource path="res://src/player/movement_state/climb.gd" type="Script" id=9]
[ext_resource path="res://src/player/movement_state/idle.gd" type="Script" id=10]
[ext_resource path="res://src/player/player_movement_state_machine.gd" type="Script" id=11]
[ext_resource path="res://src/player/movement_state/swim.gd" type="Script" id=13]
[ext_resource path="res://src/player/graphic/smol/walk/frame0011.webp" type="Texture" id=14]
[ext_resource path="res://src/player/graphic/smol/idle/frame0004.webp" type="Texture" id=15]
[ext_resource path="res://src/player/graphic/smol/idle/frame0005.webp" type="Texture" id=16]
[ext_resource path="res://src/player/graphic/smol/walk/frame0008.webp" type="Texture" id=17]
[ext_resource path="res://src/player/stagger.gd" type="Script" id=19]
[ext_resource path="res://src/player/graphic/smol/climb/climb0009.webp" type="Texture" id=20]
[ext_resource path="res://src/player/graphic/smol/climb/climb0008.webp" type="Texture" id=22]
[ext_resource path="res://src/player/graphic/smol/attack/attack0010.webp" type="Texture" id=23]
[ext_resource path="res://src/player/graphic/smol/attack/attack0008.webp" type="Texture" id=24]
[ext_resource path="res://src/player/graphic/smol/attack/attack0009.webp" type="Texture" id=25]
[ext_resource path="res://src/player/graphic/smol/attack/attack0011.webp" type="Texture" id=26]
[ext_resource path="res://src/player/attack.gd" type="Script" id=27]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.2857, 60.7143 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.7143, 60.6072 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 26 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 20 ) ],
"loop": true,
"name": "climb",
"speed": 4.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "stagger"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 13.9288, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
z_index = 1
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.714287, -60.7143 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="object_area" type="Area2D" parent="."]
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="object_area"]
position = Vector2( 0.714288, -60.8214 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.54074e-33, -61.4286 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/stagger = SubResource( 4 )

[node name="movement_state" type="Node" parent="."]
script = ExtResource( 11 )

[node name="idle" type="Node" parent="movement_state"]
script = ExtResource( 10 )

[node name="attack" type="Node" parent="movement_state"]
script = ExtResource( 27 )

[node name="move" type="Node" parent="movement_state"]
script = ExtResource( 6 )

[node name="fall" type="Node" parent="movement_state"]
script = ExtResource( 7 )

[node name="jump" type="Node" parent="movement_state"]
script = ExtResource( 8 )

[node name="climb" type="Node" parent="movement_state"]
script = ExtResource( 9 )

[node name="swim" type="Node" parent="movement_state"]
script = ExtResource( 13 )

[node name="stagger" type="Node" parent="movement_state"]
script = ExtResource( 19 )

[node name="stagger_timer" type="Timer" parent="movement_state/stagger"]
wait_time = 0.8
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_smoothed = true
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
offset_v = -0.5
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
__meta__ = {
"_edit_lock_": true
}

[node name="invincibility_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1, 0 )

[node name="FXPos" type="Position2D" parent="."]
position = Vector2( -18.5714, -41.4286 )

[connection signal="animation_finished" from="AnimatedSprite" to="movement_state" method="_on_AnimatedSprite_animation_finished"]
[connection signal="state_changed" from="movement_state" to="." method="_on_movement_state_state_changed"]
[connection signal="timeout" from="movement_state/stagger/stagger_timer" to="movement_state/stagger" method="_on_stagger_timer_timeout"]
[connection signal="timeout" from="invincibility_timer" to="." method="_on_invincibility_timer_timeout"]
